--- a/css/style.css
+++ b/css/style.css
@@ -38,11 +38,12 @@ h1, p
 {
     .logo img
     {
-         margin:15px 0 0 15px;
+         margin:10px 0 0 15px;
     }
     .navbar-nav
     {
-         margin:0;
+        background-color:rgba(0,0,0, 0.7);
+        margin:0;
     }
     .navbar-toggle
     {
@@ -53,7 +54,7 @@ h1, p
 /***SLIDER***/
 #slider
 {
-    background-image: url(../img/bg.jpg);
+    background-image: url('../img/bg.jpg');
     width: 100%;
     background-size: cover;
 }
