--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,11 @@ h1, p
     {
         margin-top:45px;
     }
+    
+    #design
+    {
+        text-align-last:center;
+    }
 }
 
 /***SLIDER***/
@@ -56,7 +61,7 @@ h1, p
 {
     background:url('../img/bg.jpg');
     width: 100%;
-    background-size: cover;
+    background-size:cover;
 }
 
 .item
@@ -123,11 +128,20 @@ h1, p
     color:#0e6655;
 }
 
+/***DESIGN***/
 
+#design
+{
+    padding:80px 0 80px 0;
+}
 
-
-
-
+#design h1
+{
+    color:#16a085;
+    font-size:1.5em;
+    font-weight:700; 
+    padding-top:30px;
+}
 
 
 
