--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,12 @@ h1, p
     {
         text-align-last:center;
     }
+    
+    #community .image
+    {
+        padding-bottom:15px;
+    }
+    
 }
 
 /***SLIDER***/
@@ -143,12 +149,25 @@ h1, p
     padding-top:30px;
 }
 
+/***COMMUNITY***/
 
+#community
+{
+    background-color:#f5f6f7;
+    padding:80px 0 80px 0;
+}
 
+#community h1
+{
+    color:#16a085;
+    font-size:1.5em;
+    font-weight:700; 
+}
 
-
-
-
+#community .green
+{
+    padding-top:30px;
+}
 
 
 
