--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,48 @@ h1, p
     color:#fff;
 }
 
+/***DOWNLOAD***/
+#download
+{
+    background-color:#f5f6f7;
+    padding:80px 0 80px 0;
+    text-align:center;
+}
+
+
+#download h1
+{
+    color:#16a085;
+    font-size:1.5em;
+    font-weight:700; 
+}
+
+#download img
+{
+    margin-top:15px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
