jQuery la navbar disp apres un scroll a 500px

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ h1, p
 
 .navbar-default
 {
-    background-color:rgba(0,0,0, 0.2);
+    background-color:transparent;
     border-color: transparent;
 }
 
