--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,13 @@ h1, p
 
 .btn-success:hover
 {
-    background-color: #000;
+    background-color:#000;
+}
+
+/* resolution du pb sur la couleur du bouton dans le slider une fois qu'on l'a cliqué  */
+.btn-success:focus, .btn-success:active:focus
+{
+    background-color:#16a085;
 }
 
 /***PHOTO***/
