--- a/css/style.css
+++ b/css/style.css
@@ -68,10 +68,7 @@ h1, p
     #footer img
     {
         margin:0 auto;
-    }
-    
-    
-    
+    }  
 }
 
 /***SLIDER***/
@@ -247,7 +244,7 @@ h1, p
 
 #footer
 {
-    padding:50px 0 50px 0;
+    padding:50px 0 2px 0;
 }
 
 #footer p
@@ -266,8 +263,20 @@ h1, p
     text-decoration:none;
 }
 
-
-
+.totop
+{
+	display:block;
+	/*position:absolute;*/
+	width:42px;
+	height:42px;
+	background-color:#16a085;
+	color:#ffffff;
+	line-height:42px;
+    margin:8px auto 0 auto;
+    /*left:47%;*/
+	cursor:pointer;
+	text-align:center;
+}
 
 
 
